--- a/oppgave/www/brukerliste.html
+++ b/oppgave/www/brukerliste.html
@@ -10,6 +10,8 @@
 
 </head>
 
+ // Code copied from https://bitbucket.org/HermanDyrkorn/imt2291-eksamen2020/src/master/oppgave1-3/www/oppgave2.html   
+    
 <body onload="getAllUsers()">
   <div class="container">
     <div class="d-flex flex-row mt-5">
