--- a/oppgave/www/brukerliste.html
+++ b/oppgave/www/brukerliste.html
@@ -10,7 +10,7 @@
 
 </head>
 
- // Code copied from https://bitbucket.org/HermanDyrkorn/imt2291-eksamen2020/src/master/oppgave1-3/www/oppgave2.html   
+ // The following code is taken from from https://bitbucket.org/HermanDyrkorn/imt2291-eksamen2020/src/master/oppgave1-3/www/oppgave2.html   
     
 <body onload="getAllUsers()">
   <div class="container">
