--- a/oppgave/www/brukerliste.html
+++ b/oppgave/www/brukerliste.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+    
+ // The following code based on https://bitbucket.org/HermanDyrkorn/imt2291-eksamen2020/src/master/oppgave1-3/www/oppgave2.html   
 
 <head>
     <meta charset="UTF-8">
@@ -9,8 +11,6 @@
     <title>Display Users</title>
 
 </head>
-
- // The following code is taken from from https://bitbucket.org/HermanDyrkorn/imt2291-eksamen2020/src/master/oppgave1-3/www/oppgave2.html   
     
 <body onload="getAllUsers()">
   <div class="container">
@@ -50,6 +50,6 @@
       </div>
     </div>
   </div>
-<script src="js/oppgave2.js" charset="utf-8"></script>
+<script src="js/brukerliste.js" charset="utf-8"></script>
 </body>
 </html>
